# GitVisionCLI

./: .gitignore  BUGS_AND_ISSUES.md  CHANGELOG.md  CHEAT_SHEET.md  COMMAND_SHEET.md  CONTRIBUTING.md  Demo.md  INTEGRATION_COMPLETE.md  MODIFIED_FILES_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v2.0.0.md  RUN_AND_TEST.md  TESTING_GUIDE.md  debug_dry_run.py  pyproject.toml  reinstall.sh  test_brain.py  test_chat_engine_and_context.py  test_editing_engine.py  test_natural_language_mapper.py  test_provider_normalizer.py  validate_improvements.py  verify_write.py
Live-Demo/: Editor,Git.mov  create.mov  remove.mov  sheet.mov  tree.mov
docs/: COMMANDS.md  COMMAND_SHEET.md  FEATURES.md  NATURAL_LANGUAGE_ACTION_ENGINE.md  PUBLISH_READY.md  QUICKSTART.md  README.md  RUN_AND_TEST.md  SYSTEM_STATUS.md
examples/: natural_language_action_engine_example.py
gitvisioncli/: __main__.py  cli.py
gitvisioncli/config/: settings.py
gitvisioncli/core/: __init__.py  action_router.py  ai_client.py  application_controller.py  brain.py  chat_engine.py  command_normalizer.py  command_router.py  context_manager.py  doc_sync.py  editing_engine.py  executor.py  github_client.py  natural_language_action_engine.py  natural_language_mapper.py  planner.py  provider_normalizer.py  safe_patch_engine.py  supervisor.py  terminal.py
gitvisioncli/features/: code_review.py  project_generator.py  readme_gen.py
gitvisioncli/plugins/: __init__.py  base_plugin.py  plugin_manager.py  registry.py
gitvisioncli/services/: __init__.py  config_service.py  file_service.py  (+2 more)
scripts/: QUICK_START.sh  README.md  create_release.sh  validate_improvements.py
tests/: README.md  TEST_EXPANSION_SUMMARY.md  TEST_FIXES_SUMMARY.md  TEST_RESULTS_SUMMARY.md  VERIFY_TESTS.md  test_all_scenarios.py  test_comprehensive_operations.py  test_edge_cases.py  test_extensive_natural_language.py
(+54 files in other folders)
