[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitvisioncli"
version = "2.0.0"
description = "AI-powered terminal IDE with dual-panel interface, multi-model support, and live editing capabilities"
authors = [
    { name = "Nikan Eidi", email = "nikaneydi1984@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "git", "ide", "terminal", "cli", "code-assistant", "openai", "gemini", "claude", "ollama", "live-editing"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "markdown-it-py>=2.2.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.7.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/NikanEidi/gitvisioncli"
Source = "https://github.com/NikanEidi/gitvisioncli"

[project.scripts]
gitvision = "gitvisioncli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"gitvisioncli.config" = ["config.json"]
